--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,23 @@ services:
     ports:
       - "8080:8080"
     env_file:
-      - ./payment-api/.env
+      - .env
+    environment:
+      - PROFILE_ACTIVE=${PROFILE_ACTIVE}
+      - API_PORT=${API_PORT}
+      - ACTUATOR_PORT=${ACTUATOR_PORT}
+      - POSTGRES_HOST=${POSTGRES_HOST}
+      - POSTGRES_DATABASE=${POSTGRES_DATABASE}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
+      - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
+      - MERCADO_PAGO_ACCESS_TOKEN=${MERCADO_PAGO_ACCESS_TOKEN}
+      - SMTP_HOST=${SMTP_HOST}
+      - SMTP_EMAIL=${SMTP_EMAIL}
+      - SMTP_PORT=${SMTP_PORT}
+      - SMTP_USER=${SMTP_USER}
+      - SMTP_API_TOKEN=${SMTP_API_TOKEN}
     depends_on:
       - payment-db
     networks:
@@ -16,7 +32,11 @@ services:
     container_name: payment-web
     restart: unless-stopped
     env_file:
-      - ./payment-web/.env
+      - .env
+    environment:
+      - PROFILE_ACTIVE=${PROFILE_ACTIVE}
+      - WEB_PORT=${WEB_PORT}
+      - API_URL=${API_URL}
     ports:
       - "3000:3000"
     networks:
@@ -26,7 +46,11 @@ services:
     image: postgres:17-alpine
     container_name: payment-db
     env_file:
-      - ./payment-api/.env
+      - .env
+    environment:
+      - POSTGRES_DATABASE=${POSTGRES_DATABASE}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     ports:
       - "5432:5432"
     volumes:
@@ -38,7 +62,10 @@ services:
     image: dpage/pgadmin4:latest
     container_name: pg-admin
     env_file:
-      - ./payment-api/.env
+      - .env
+    environment:
+      - PGADMIN_DEFAULT_EMAIL=${PGADMIN_DEFAULT_EMAIL}
+      - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_DEFAULT_PASSWORD}
     ports:
       - "5050:80"
     depends_on:
