--- a/payment-api/src/main/resources/application.yaml
+++ b/payment-api/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ spring:
     active: ${PROFILE_ACTIVE:development}
 
   datasource:
-    url: jdbc:postgresql://${POSTGRES_HOST}:5432/${POSTGRES_NAME}
+    url: jdbc:postgresql://${POSTGRES_HOST}:5432/${POSTGRES_DATABASE}
     username: ${POSTGRES_USER}
     password: ${POSTGRES_PASSWORD}
     driver-class-name: org.postgresql.Driver
@@ -33,7 +33,8 @@ server:
 # APP + Actuator = same PORT
 management:
   server:
-    port: ${API_PORT}
+    port: ${ACTUATOR_PORT}
+
 
 # ...
 
@@ -80,6 +81,7 @@ management:
       exposure:
         include: "*"
 
+
 # ...
 
 --- # PRODUCTION EXCLUSIVES
@@ -104,5 +106,6 @@ management:
     web:
       exposure:
         include: "health,info" # Hide sensitive data
+
 
 # ...
